RaylibSharp/Raylib.cs


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image LoadImagePro(IntPtr data, int width, int height, int format);                                 // Load image from raw data with parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image LoadImageRaw(string fileName, int width, int height, int format, int headerSize);       // Load image from RAW file data

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ExportImage(Image image, string fileName);                                               // Export image data to file

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ExportImageAsCode(Image image, string fileName);                                         // Export image as code file defining an array of bytes

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Texture2D LoadTexture(string fileName);                                                       // Load texture from file into GPU memory (VRAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Texture2D LoadTextureFromImage(Image image);                                                       // Load texture from image data

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern TextureCubemap LoadTextureCubemap(Image image, int layoutType);                                    // Load cubemap from image, multiple image cubemap layouts supported

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern RenderTexture2D LoadRenderTexture(int width, int height);                                          // Load texture for rendering (framebuffer)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadImage(Image image);                                                                     // Unload image from CPU memory (RAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadTexture(Texture2D texture);                                                             // Unload texture from GPU memory (VRAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadRenderTexture(RenderTexture2D target);                                                  // Unload render texture from GPU memory (VRAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Color* GetImageData(Image image);                                                                  // Get pixel data from image as a Color public struct array

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector4* GetImageDataNormalized(Image image);                                                      // Get pixel data from image as Vector4 array (float normalized)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Rectangle GetImageAlphaBorder(Image image, float threshold);                                       // Get image alpha border rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetPixelDataSize(int width, int height, int format);                                           // Get pixel data size in bytes (image or texture)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GetTextureData(Texture2D texture);                                                           // Get pixel data from GPU texture and return an Image

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GetScreenData();                                                                         // Get pixel data from screen buffer and return an Image (screenshot)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UpdateTexture(Texture2D texture, IntPtr pixels);                                         // Update GPU texture with new data

		// Image manipulation functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image ImageCopy(Image image);                                                                      // Create an image duplicate (useful for transformations)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image ImageFromImage(Image image, Rectangle rec);                                                  // Create an image from another image piece

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageToPOT(Image* image, Color fillColor);                                                    // Convert image to POT (power-of-two)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageFormat(Image* image, int newFormat);                                                     // Convert image data to desired format

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageAlphaMask(Image* image, Image alphaMask);                                                // Apply alpha mask to image

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageAlphaClear(Image* image, Color color, float threshold);                                  // Clear alpha channel to desired color

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageAlphaCrop(Image* image, float threshold);                                                // Crop image depending on alpha value

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageAlphaPremultiply(Image* image);                                                          // Premultiply alpha channel

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageCrop(Image* image, Rectangle crop);                                                      // Crop an image to a defined rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageResize(Image* image, int newWidth, int newHeight);                                       // Resize image (Bicubic scaling algorithm)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageResizeNN(Image* image, int newWidth, int newHeight);                                      // Resize image (Nearest-Neighbor scaling algorithm)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageResizeCanvas(Image* image, int newWidth, int newHeight, int offsetX, int offsetY, Color color);  // Resize canvas and fill with color

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageMipmaps(Image* image);                                                                   // Generate all mipmap levels for a provided image

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageDither(Image* image, int rBpp, int gBpp, int bBpp, int aBpp);                            // Dither image data to 16bpp or lower (Floyd-Steinberg dithering)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Color* ImageExtractPalette(Image image, int maxPaletteSize, int* extractCount);                    // Extract color palette from image to maximum size (memory should be freed)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image ImageText(string text, int fontSize, Color color);                                      // Create an image from text (default font)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image ImageTextEx(Font font, string text, float fontSize, float spacing, Color tint);         // Create an image from text (custom sprite font)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageDraw(Image* dst, Image src, Rectangle srcRec, Rectangle dstRec, Color tint);             // Draw a source image within a destination image (tint applied to source)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageDrawRectangle(Image* dst, Rectangle rec, Color color);                                   // Draw rectangle within an image

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageDrawRectangleLines(Image* dst, Rectangle rec, int thick, Color color);                   // Draw rectangle lines within an image

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageDrawText(Image* dst, Vector2 position, string text, int fontSize, Color color);     // Draw text (default font) within an image (destination)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageDrawTextEx(Image* dst, Vector2 position, Font font, string text, float fontSize, float spacing, Color color); // Draw text (custom sprite font) within an image (destination)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageFlipVertical(Image* image);                                                              // Flip image vertically

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageFlipHorizontal(Image* image);                                                            // Flip image horizontally

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageRotateCW(Image* image);                                                                  // Rotate image clockwise 90deg

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageRotateCCW(Image* image);                                                                 // Rotate image counter-clockwise 90deg

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageColorTint(Image* image, Color color);                                                    // Modify image color: tint

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageColorInvert(Image* image);                                                               // Modify image color: invert

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageColorGrayscale(Image* image);                                                            // Modify image color: grayscale

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageColorContrast(Image* image, float contrast);                                             // Modify image color: contrast (-100 to 100)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageColorBrightness(Image* image, int brightness);                                           // Modify image color: brightness (-255 to 255)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageColorReplace(Image* image, Color color, Color replace);                                  // Modify image color: replace color

		// Image generation functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageColor(int width, int height, Color color);                                           // Generate image: plain color
